poprawki w kodzie, wciąż do zrobienia punkty 6a i 6b problem z obliczaniem średniej dla zamówień z produktem

--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/view/purchasesList.xml
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/view/purchasesList.xml
@@ -16,7 +16,7 @@
 
         <ribbon>
             <template name="standardGridTemplate"/>
-            <group name="conversions">
+            <group name="calculations">
                 <bigButton name="getAveragePriceOfAll" icon="genealogyIcon24.png">
                     <script>
 						<![CDATA[
