--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/view/purchaseDetails.xml
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/view/purchaseDetails.xml
@@ -14,17 +14,19 @@
     <component type="window" name="window" reference="window">
         <ribbon>
             <template name="standardFormTemplate"/>
-            <bigButton name="getAveragePriceOfProduct" icon="genealogyIcon24.png">
+            <group name="calculations">
+                <bigButton name="getAveragePriceOfProduct" icon="genealogyIcon24.png">
                     <script>
 						<![CDATA[
 							this.addOnChangeListener({
 								onClick: function() {
-    #{grid}.performEvent('getAveragePriceOfProduct', []);
+    #{form}.performEvent('getAveragePriceOfProduct', []);
 }
                                                     });
 						]]>
                     </script>
                 </bigButton>
+            </group>
         </ribbon>
 
         <component type="form" name="form" reference="form">
@@ -41,7 +43,7 @@
                 </layoutElement>
                 <layoutElement column="1" row="2">
                     <component type="input" name="quantity" field="quantity" />
-<!--                    <component type="input" name="unit" field="#{product}.unit" defaultEnabled="never" hasLabel="false"/>-->
+                    <!--                    <component type="input" name="unit" field="#{product}.unit" defaultEnabled="never" hasLabel="false"/>-->
                 </layoutElement>
                 <layoutElement column="1" row="3">
                     <component type="input" name="price" field="price" />
@@ -53,9 +55,9 @@
                 </layoutElement>
             </component>
             <option type="header" value="true" />
-            <option type="expression" value="date + ' - ' + #product['name']" />
-            <listener event="getAveragePriceOfAll" class="com.qcadoo.mes.basic.PurchaseService"
-				method="getAveragePriceOfProduct" />
+            <option type="expression" value="#product['name'] + ' x ' + #quantity + ' - ' + #date" />
+            <listener event="getAveragePriceOfProduct" class="com.qcadoo.mes.basic.PurchaseService"
+                      method="getAveragePriceOfProduct" />
         </component>
     </component>
 </view>
